fix image spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,6 @@ footer {
         float: none;
         max-width: 80%;
         min-width: 200px;
-        margin: 5px auto 0 auto ;
+        margin: 5px 10% 0 10% ;
     }
 }
